--- a/P5 project/P5 project.csproj
+++ b/P5 project/P5 project.csproj
@@ -84,6 +84,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Enemy.cs" />
     <Compile Include="Assets\Gun.cs" />
   </ItemGroup>
   <ItemGroup>
