--- a/P5 project/P5 project.csproj
+++ b/P5 project/P5 project.csproj
@@ -84,8 +84,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Enemy.cs" />
-    <Compile Include="Assets\Gun.cs" />
+    <Compile Include="Assets\FPS related\Enemy.cs" />
+    <Compile Include="Assets\FPS related\Gun.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
